--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <section id="main">
         You should sing:
 
-        <a id="suggestion" href="">
+        <a id="suggestion" href="" target="_blank">
             &ThinSpace;
         </a>
 
